--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,9 @@
-baseURL = "http://example.org/"
+baseURL = "https://amita-kullaphan.github.io"
 languageCode = "en-us"
 paginate = 6
 theme = "portio"
 title = "Portio"
+
 # Main Menu
 [[menu.main]]
 name = "Home"
