--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -8,11 +8,11 @@ sections:
   path: data/hero.yml
   label: Hero
 - type: document
-  path: data/aboutSection.yml
-  label: About
-- type: document
   path: data/serviceSection.yml
   label: Services
+- type: document
+  path: data/aboutSection.yml
+  label: About
 - type: document
   path: data/resumeSection.yml
   label: Resume
@@ -26,20 +26,19 @@ sections:
   path: data/blogSection.yml
   label: Blog Section
 - type: directory
-  path: content/portfolio
-  label: Portfolio
-  create: all
-  match: "**/*"
-- type: directory
   path: content/contact
   label: Contact
   create: all
   match: "**/*"
 - type: directory
-  path: content/blog
-  label: Blog
+  path: content/faq
+  label: FAQ
   create: all
-  match: "**/*"
+#- type: directory
+#  path: content/blog
+#  label: Blog
+#  create: all
+#  match: "**/*"
 - type: document
   path: config.toml
   label: Config File
