--- a/data/aboutSection.yml
+++ b/data/aboutSection.yml
@@ -1,20 +1,16 @@
 ---
 enable: true
-topTitle: About
+topTitle: #About
 title: >
   ## About me
 
-  Enjoy team diversity and increase their networks among others people in
-  various fields by provided.
+  Text
 content: >
-  ### I design and build ultimate things.
-
-  I love to work in User Experience & User Interface designing. Because I love
-  to solve the design problem and find easy and better solutions to solve it. I always
-  try my best to make good user interface with the best user experience. I have been
-  working as a Visual designer from.
+  ### Text
+  
+  Text
 button1Name: Hire me
-button2Name: Download CV
+#button2Name: Download CV
 button1Target: contact
 button2Target: contact
-image: images/about/about-img.jpg
+image: images/about/amita2.jpg
