--- a/data/skillSection.yml
+++ b/data/skillSection.yml
@@ -2,16 +2,16 @@
 enable: true
 topTitle: My Skills
 content: >
-  ## Why hire me for your next project?
+  ## Why hire me?
 
-  My goal is to build a strong supportive professional network among all freelancers and startups in order to improve their performance.
+  Text.
 
-image: images/skill/skill_image.jpg
+image: images/skill/amita3.jpeg
 
-skill:
-  - title: HTML
-    percent: 69
-  - title: CSS
-    percent: 60
-  - title: Javascript
-    percent: 85
+#skill:
+#  - title: HTML
+#    percent: 69
+#  - title: CSS
+#    percent: 60
+#  - title: Javascript
+#    percent: 85
