--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://amita-kullaphan.github.io"
 languageCode = "en-us"
 paginate = 6
 theme = "portio"
-title = "Portio"
+title = "Amita Kullaphan"
 
 # Main Menu
 [[menu.main]]
