--- a/data/hero.yml
+++ b/data/hero.yml
@@ -10,6 +10,6 @@ content: >
   As a lawyer, I have experience working with clients both in Thailand and abroad, so I'm happy to provide my services remotely. Whether you're a local resident, a foreign investor, expat, or just someone looking to buy a vacation home in Thailand, I'm here to help.
 buttonName: Contact me
 buttonURL: contact
-image: images/hero/amita.jpg
+image: images/hero/amita.png
 videoThumb: images/hero/popup-thumb.png
 videoURL: #https://www.youtube.com/watch?v=dQw4w9WgXcQ
