--- a/data/serviceSection.yml
+++ b/data/serviceSection.yml
@@ -9,8 +9,8 @@ service:
   - content: >
       #### Property sales, purchases, and lease
       
-      Text.
-    image: images/service/web.svg
+      Sale, purchase, leasing of real estate transactions whether it's simple or complex, big or small.
+    image: images/service/house.svg
   - content: >
       #### Company formation and purchases
 
@@ -20,34 +20,34 @@ service:
       #### Estate administration
 
       Text.
-    image: images/service/web.svg
+    image: images/service/court.svg
   - content: >
       #### Will and testament
 
       Text.
-    image: images/service/ui-ux.svg
+    image: images/service/pen.svg
   - content: >
       #### Family law
 
       Text.
-    image: images/service/branding.svg
+    image: images/service/family.svg
   - content: >
       #### Litigation
 
       Text.
-    image: images/service/web.svg
-  - content: >
-      #### Usufructs and servitudes
-
-      Text.
-    image: images/service/web.svg
+    image: images/service/gavel.svg
   - content: >
       #### Notarial services
 
       Text.
-    image: images/service/ui-ux.svg
+    image: images/service/notary.svg
   - content: >
       #### Visas and work permits
 
       Text.
-    image: images/service/ui-ux.svg
+    image: images/service/pen.svg
+  - content: >
+      #### Usufructs and servitudes
+
+      Text.
+    image: images/service/stack.svg
