--- a/data/skillSection.yml
+++ b/data/skillSection.yml
@@ -1,10 +1,18 @@
 ---
 enable: true
-topTitle: My Skills
+#topTitle: My Skills
 content: >
   ## Why hire me?
 
-  Text.
+   Despite my sunny character and easy-going nature, I approach the issues that clients bring to me with seriousness.
+
+
+   I understand the fear and uncertainty that expatriates experience when making large transfers to purchase new homes, as I am well aware that things do not always go smoothly in Thailand.
+   Rather than telling clients what they want to hear, I offer solutions based on facts and honesty because I care about their situation and future.
+
+
+   On the other hand, dealing with the inheritance procedures of a loved one who has passed away can be emotional. 
+   I recognize the gravity of the situation and compassionately guide clients through difficult times.
 
 image: images/skill/amita3.jpg
 
