--- a/config.toml
+++ b/config.toml
@@ -38,6 +38,16 @@ name = "Contact"
 url = "#contact"
 weight = 8
 
+# Web Development
+#[[menu.webdev]]
+#name = "Nikolas Charalambidis"
+#url = "https://nikolas-charalambidis.github.io"
+#weight = 1
+#[[menu.webdev]]
+#name = "Portio Hugo template"
+#url = "https://github.com/StaticMania/portio-hugo"
+#weight = 2
+
 # Sitemap Menu
 #[[menu.sitemap]]
 #name = "About me"
