--- a/data/resumeSection.yml
+++ b/data/resumeSection.yml
@@ -9,7 +9,7 @@ title: >
   Although my primary focus throughout my professional life has been on property law, I have also taken an interest in the tax field. 
   
   
-  I am a licensed Thai lawyer and hold certification as a barrister, which is required to represent clients in court trials. 
+  I am a licensed Thai lawyer and hold certification as an attorney, which is required to represent clients in court trials. 
   In addition, I am also a public notary with extensive experience and knowledge in areas such as property purchases, estate administration, company establishment, and family law.
 
 tab1Name: Education
@@ -21,22 +21,23 @@ education:
   - content: >
       #### Thammasat University
 
-      Text
+      Master's classes gave me in-depth knowledge of the tax code, which had long been my interest. My advantage is that I offer the aforementioned services in line with the tax context. 
+      It ensures that a client’s issue is resolved efficiently from both legal and tax perspectives.
     time: LL.M. in Taxes Law
   - content: >
       #### Institute of Legal Education, Thai Bar Association
 
-      Text
+      Passing the Thai Bar Association exam proves the comprehensive knowledge that extends far beyond the standard bachelor's program.
     time: Barrister-at-Law
   - content: >
       #### Lawyers Council of Thailand
 
-      Text
+      Only those who pass an exam, which is preceded by extensive practice under the supervision of a qualified attorney, are permitted to operate as individual attorneys and represent clients.
     time: Attorney-at-Law
   - content: >
       #### Chulalongkorn University
 
-      Text
+      I primarily focused on civic code and law because they closely accompany the life of every one of us, from the point of birth, through marriage and family life up to retirement.
     time: LL.B. in Civil and Criminal Law
 
 experience:
@@ -48,10 +49,11 @@ experience:
   - content: >
       #### SCL Nishimura C&P Limited 
 
-      Text
+      I guided clients through the legal process and ensured that proper procedures were followed during the acquisition or sale of properties. Although I could not claim that every transaction I handled went smoothly, my detailed contract reviews resulted in a 100% accomplishment rate for property closings, regardless of the transaction size.
+  # I guided clients through the legal process and ensured that proper procedures were followed during the acquisition or sale of properties. I am not able to claim that every transaction I had handled wen smoothly, but upon the detailed contract review, it led to the result in 100% accomplishment of the property closing whether it was big or small.
     time: Associate Lawyer
-  - content: >
-      #### Chavalit and Partner Limited 
-
-      Text
-    time: Associate Lawyer
+  #- content: >
+  #    #### Chavalit and Partner Limited
+  #
+  #    Text
+  #  time: Associate Lawyer
