--- a/data/resumeSection.yml
+++ b/data/resumeSection.yml
@@ -19,38 +19,39 @@ tab2Target: experience
 
 education:
   - content: >
-      #### Thammasat University
+      ### Thammasat University
 
       Master's classes gave me in-depth knowledge of the tax code, which had long been my interest. My advantage is that I offer the aforementioned services in line with the tax context. 
       It ensures that a client’s issue is resolved efficiently from both legal and tax perspectives.
     time: LL.M. in Taxes Law
   - content: >
-      #### Institute of Legal Education, Thai Bar Association
+      ### Institute of Legal Education, Thai Bar Association
 
       Passing the Thai Bar Association exam proves the comprehensive knowledge that extends far beyond the standard bachelor's program.
     time: Barrister-at-Law
   - content: >
-      #### Lawyers Council of Thailand
+      ### Lawyers Council of Thailand
 
       Only those who pass an exam, which is preceded by extensive practice under the supervision of a qualified attorney, are permitted to operate as individual attorneys and represent clients.
     time: Attorney-at-Law
   - content: >
-      #### Chulalongkorn University
+      ### Chulalongkorn University
 
-      I primarily focused on civic code and law because they closely accompany the life of every one of us, from the point of birth, through marriage and family life up to retirement.
+      I primarily focused on civic code and law because they closely accompany the life of every one of us, from the point of birth, through marriage, family life and property purchase up to retirement.
     time: LL.B. in Civil and Criminal Law
 
 experience:
   - content: >
-      #### Absolute Lawyer Hua Hin 
+      ### Absolute Lawyer Hua Hin Limited
 
       Text
     time: Director and Lawyer
   - content: >
-      #### SCL Nishimura C&P Limited 
+      ### SCL Nishimura C&P Limited
+      
+      #### (formerly Chavalit and Partner Limited)
 
       I guided clients through the legal process and ensured that proper procedures were followed during the acquisition or sale of properties. Although I could not claim that every transaction I handled went smoothly, my detailed contract reviews resulted in a 100% accomplishment rate for property closings, regardless of the transaction size.
-  # I guided clients through the legal process and ensured that proper procedures were followed during the acquisition or sale of properties. I am not able to claim that every transaction I had handled wen smoothly, but upon the detailed contract review, it led to the result in 100% accomplishment of the property closing whether it was big or small.
     time: Associate Lawyer
   #- content: >
   #    #### Chavalit and Partner Limited
