--- a/data/resumeSection.yml
+++ b/data/resumeSection.yml
@@ -44,7 +44,9 @@ experience:
   - content: >
       ### Absolute Lawyer Hua Hin Limited
 
-      Text
+      In my law office I face difficulties arising out during the legal process which mostly and immediately pop-up in the last minute before closing i.e. changing the term of payment, problem of transfer money from abroad, failure to furnish necessary documents required by the land office, invalid of Land Office Power of Attorney, expiration of passport, dispute of income tax of landlord/developer, even an incorrect of company minute of meeting etc. 
+      These are common issues that can cause a real estate transaction to fail, but I am prepared for the unexpected circumstances.
+      Protecting your property interest is imperative to my legal practice.
     time: Director and Lawyer
   - content: >
       ### SCL Nishimura C&P Limited
