--- a/data/resumeSection.yml
+++ b/data/resumeSection.yml
@@ -4,14 +4,13 @@ topTitle: #My Resume
 title: >
   ## My Qualification
 
+  My interest in law began before I enrolled at the university. 
+  I gained my initial experience as a part-time paralegal during my studies. 
+  Although my primary focus in my professional life has been on property law, I have also developed an interest in taxation.
 
-  My interest in law began during my university studies, where I acquired my initial experience as a part-time paralegal. 
-  Although my primary focus throughout my professional life has been on property law, I have also taken an interest in the tax field. 
-  
-  
-  I am a licensed Thai lawyer and hold certification as an attorney, which is required to represent clients in court trials. 
+
+  I am a licensed Thai lawyer with attorney certification, which is required to represent clients in court trials.
   In addition, I am also a public notary with extensive experience and knowledge in areas such as property purchases, estate administration, company establishment, and family law.
-
 tab1Name: Education
 tab2Name: Experiences
 tab1Target: education
