--- a/data/aboutSection.yml
+++ b/data/aboutSection.yml
@@ -6,15 +6,15 @@ title: >
 
   In Thailand, nicknames are typically used instead of birth names. My nickname is Kiki.
 content: >
-  I have a great love for exploring local cuisines and traveling. 
-  
-  
+  I have a great love for exploring local cuisines and traveling.
+
+
   My initial trips were during my academic years to South Korea and Taiwan, where I traveled to work on tax report projects with my classmates. 
-  As I progressed in my career, I was fortunate enough to travel to Europe and other parts of East Asia. 
-  
-  
-  In addition to diverse cuisines, I also came across distinct cultures that taught me the importance of embracing differences. 
-  Since most of my clients are Westerners, I understand their preference for direct and detailed communication.
+  As I progressed in my career, I was fortunate enough to travel to Europe and other parts of East Asia.
+
+
+  I also came across distinct cultures that taught me the importance of embracing differences.
+  Since, most of my clients are Westerners, I understand their preference for direct communication and detailed explanation.
 button1Name: Hire me
 #button2Name: Download CV
 button1Target: contact
