--- a/data/skillSection.yml
+++ b/data/skillSection.yml
@@ -12,8 +12,7 @@ content: >
 
 
    On the other hand, dealing with the inheritance procedures of a loved one who has passed away can be emotional. 
-   I recognize the gravity of the situation and compassionately guide clients through difficult times.
-
+   I realize the seriousness of the situation and compassionately guide clients through difficult times.
 image: images/skill/amita4.jpg
 
 #skill:
