--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://amita-kullaphan.github.io"
+baseURL = "https://amita-kullaphan.com"
 languageCode = "en-us"
 paginate = 6
 theme = "portio"
