--- a/data/aboutSection.yml
+++ b/data/aboutSection.yml
@@ -13,7 +13,7 @@ content: >
   As I progressed in my career, I was fortunate enough to travel to Europe and other parts of East Asia.
 
 
-  I also came across distinct cultures that taught me the importance of embracing differences.
+  I came across distinct cultures that taught me the importance of embracing differences.
   Since, most of my clients are Westerners, I understand their preference for direct communication and detailed explanation.
 button1Name: Hire me
 #button2Name: Download CV
