--- a/data/hero.yml
+++ b/data/hero.yml
@@ -5,7 +5,7 @@ content: >
   # I'm a Thai property lawyer
 
   With a passion for property law, I’ve dedicated myself to assisting clients navigating through the complex legal landscapes surrounding property transactions in Thailand. 
-  As a lawyer, I have experience working with clients both in Thailand and abroad, so I am happy to provide my services online.
+  I have experience, as a lawyer, working with clients both in Thailand and abroad, so I am happy to provide my services online.
 
 
   Whether you’re a local resident, a foreign investor, an expat, or just someone looking to buy a vacation home in Thailand, I’m here to help.
