--- a/config.toml
+++ b/config.toml
@@ -58,7 +58,7 @@ name = "Contact"
 url = "contact"
 weight = 1
 [[menu.sitemap]]
-name = "Frequently Ask Questions"
+name = "Frequently Asked Questions"
 url = "faq"
 weight = 2
 #[[menu.sitemap]]
