--- a/config.toml
+++ b/config.toml
@@ -77,7 +77,7 @@ copyright = "All rights reserved copyright © Amita Kullaphan 2023"
 #footerLogo = "images/contact/widget-logo.png"
 formspreeURL = "YOUR FORMSPREE URL"
 formspreeEnabled = false
-googleAnalytics = "YOUR GOOGLE ANALYTICS CODE"
+googleAnalytics = "G-MQQE4ZKSQV"
 #logo = "images/site-navigation/logo.png"
 
 [params.address]
