Main page image

--- a/data/hero.yml
+++ b/data/hero.yml
@@ -11,6 +11,6 @@ content: >
   Whether you’re a local resident, a foreign investor, an expat, or just someone looking to buy a vacation home in Thailand, I’m here to help.
 buttonName: Contact me
 buttonURL: contact
-image: images/hero/amita.png
+image: images/hero/amita.jpeg
 videoThumb: images/hero/popup-thumb.png
 videoURL: #https://www.youtube.com/watch?v=dQw4w9WgXcQ
