--- a/data/serviceSection.yml
+++ b/data/serviceSection.yml
@@ -30,7 +30,7 @@ service:
   - content: >
       #### Income tax
 
-      Your income source can include retirement pensions, employment salaries, dividends, rental income, and other taxable assets. Are you a tax resident? You can depend on my up-to-date tax consultation services.
+      Your income source can include retirement pensions, employment salaries, dividends, rental income, and other taxable assets. Are you a tax resident? You can depend on my up-to-date tax consultation services. [Read more about tax in my articles](/tags/tax/).
     image: images/service/tax.svg
   - content: >
       #### Family law
