--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -30,10 +30,10 @@ sections:
   label: Contact
   create: all
   match: "**/*"
-- type: directory
-  path: content/faq
-  label: FAQ
-  create: all
+#- type: directory
+#  path: content/faq
+#  label: FAQ
+#  create: all
 #- type: directory
 #  path: content/blog
 #  label: Blog
