--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://amita-kullaphan.com"
 languageCode = "en-us"
 paginate = 6
-theme = "portio"
+theme = ["portio", "hugo-cite"]
 title = "Amita Kullaphan"
 
 # Main Menu
@@ -26,27 +26,27 @@ name = "Qualification"
 url = "#resume"
 weight = 5
 [[menu.main]]
-name = "Skills"
-url = "#skills"
+name = "Why Me?"
+url = "#why-me"
 weight = 6
-#[[menu.main]]
-#name = "Blog"
-#url = "#blog"
-#weight = 7
+[[menu.main]]
+name = "Recent"
+url = "#articles"
+weight = 7
 [[menu.main]]
 name = "Contact"
 url = "#contact"
 weight = 8
 
 # Web Development
-[[menu.webdev]]
-name = "Nikolas Charalambidis"
-url = "https://nikolas-charalambidis.com"
-weight = 1
+#[[menu.webdev]]
+#name = "Nikolas Charalambidis"
+#url = "https://nikolas-charalambidis.com"
+#weight = 1
 [[menu.webdev]]
 name = "Portio Hugo template"
 url = "https://github.com/StaticMania/portio-hugo"
-weight = 2
+weight = 1
 
 # Sitemap Menu
 #[[menu.sitemap]]
@@ -58,9 +58,13 @@ name = "Contact"
 url = "contact"
 weight = 1
 [[menu.sitemap]]
-name = "Frequently Asked Questions"
-url = "faq"
+name = "Blog"
+url = "blog"
 weight = 2
+#[[menu.sitemap]]
+#name = "Frequently Asked Questions"
+#url = "faq"
+#weight = 2
 #[[menu.sitemap]]
 #name = "Privacy & Policy"
 #url = "#"
