--- a/data/hero.yml
+++ b/data/hero.yml
@@ -9,8 +9,10 @@ content: >
 
 
   Whether you’re a local resident, a foreign investor, an expat, or just someone looking to buy a vacation home in Thailand, I’m here to help.
-buttonName: Contact me
-buttonURL: contact
+button1Name: Contact me
+button1URL: contact
+button2Name: Blog
+button2URL: blog
 image: images/hero/amita.jpeg
 videoThumb: images/hero/popup-thumb.png
 videoURL: #https://www.youtube.com/watch?v=dQw4w9WgXcQ
