TIN & Income tax

--- a/data/serviceSection.yml
+++ b/data/serviceSection.yml
@@ -28,7 +28,7 @@ service:
       Create or modify a will and testament to secure all the assets and provide you greater peace of mind and ensure that it is made pursuant to the required formalities under Thai Law.
     image: images/service/pen.svg
   - content: >
-      #### Income tax
+      #### TIN & Income tax
 
       Your income source can include retirement pensions, employment salaries, dividends, rental income, and other taxable assets. Are you a tax resident? You can depend on my up-to-date tax consultation services. [Read more about tax in my articles](/tags/tax/).
     image: images/service/tax.svg
